@@ -18,6 +18,7 @@ libgtk_la_SOURCES = \
 	gtkcheckmenuitem.c	\
 	gtkclist.c		\
 	gtkcolorsel.c		\
+	gtkcombobox.c		\
 	gtkcontainer.c		\
 	gtkcurve.c		\
 	gtkdata.c		\
@@ -106,6 +107,7 @@ gtkinclude_HEADERS = \
 	gtkcheckmenuitem.h	\
 	gtkclist.h		\
 	gtkcolorsel.h		\
+	gtkcombobox.h		\
 	gtkcontainer.h		\
 	gtkcurve.h		\
 	gtkdata.h		\
